package interface_adapter.new_game;

public class NewGameViewModel {
}
