package use_case.new_game;

public interface NewGameInputBoundary {
}
