package use_case.new_game;

public class NewGameInputData {
}
